Imported from util-linux-2.11o tarball.

--- a/getopt-1.1.2/getopt.1
+++ b/getopt-1.1.2/getopt.1
@@ -88,7 +88,7 @@ More than one option name
 may be specified at once, by separating the names with commas. This option 
 may be given more than once, the 
 .I longopts 
-are cummulative.
+are cumulative.
 Each long option name
 in 
 .I longopts 
