--- a/misc-utils/replay.1
+++ b/misc-utils/replay.1
@@ -149,7 +149,7 @@ replay timingfile [typescript [divisor]]
 .IX Header "DESCRIPTION"
 This program replays a typescript, using timing information to ensure that
 output happens at the same speed as it originally appeared when the script
-was recorded. It is only guaranteed to work preperly if run on the same
+was recorded. It is only guaranteed to work properly if run on the same
 terminal the script was recorded on.
 .PP
 The timings information is what script outputs to standard error if it is
@@ -171,6 +171,9 @@ specifying a divisor of 2 makes the script be replayed twice as fast.
 \& Script done, file is typescript
 \& % replay timingfile
 .Ve
+.SH "SEE ALSO"
+.IX Header "SEE ALSO"
+.BR script (1)
 .SH "COPYRIGHT"
 .IX Header "COPYRIGHT"
 This program is in the public domain.
