--- a/misc-utils/script.1
+++ b/misc-utils/script.1
@@ -124,7 +124,8 @@ is assumed. (Most shells set this variable automatically).
 .Xr csh 1
 (for the
 .Em history
-mechanism).
+mechanism),
+.Xr replay 1 .
 .Sh HISTORY
 The
 .Nm script
