--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,33 @@
+util-linux 2.11o
+
+* Estonian messages (Meelis Roos)
+* No new French messages yet (Michel Robitaille)
+* Japanese messages (Daisuke Yamashita)
+* Spanish messages (Santiago Vila Doncel)
+* cal: option -s: Sunday is first day of the week
+* cal.1: updated
+* cfdisk: give not only bytes but also MB or GB for clarity.
+* colrm: wide character fix (Elliot Lee)
+* *fdisk: added Darwin types (Vincent Bourgonjen)
+* fstab.5: updated
+* hwclock: cmos.c: do not include <asm/io.h> on alpha
+* mount: improved detection of ufs (and slowdown of detection of iso9660)
+* mount.8: added info on * in /etc/filesystems, shortname option of vfat,
+  mount --move, udf, return codes
+* raw: try /dev/raw/rawctl when /dev/rawctl fails (Thierry Vignaud)
+* rc.serial: removed - setserial is no longer in util-linux (kromJx)
+* README.admutil: removed - only of historical interest
+* README.bootutils-0.1: removed - only of historical interest
+* script: security fix
+* sfdisk: improved geometry detection; wider columns; default disks from
+  /proc/partitions
+* umount: permission test owner umount
+* wall.1: added suid restriction
+
 util-linux 2.11n
 
 * Danish messages (Claus Hindsgaul)
-* No new French messages yet
+* No new French messages yet (Michel Robitaille)
 * German messages (Karl Eichwalder)
 * Swedish messages (Christian Rose)
 * Turkish messages now in UTF-8 (Nilgün Belma Bugüner)
@@ -66,7 +92,7 @@ util-linux 2.11k
 
 util-linux 2.11j
 
-* No new French messages yet
+* No new French messages yet (Michel Robitaille)
 * fdisk: fix for AIX label (Olaf Hering)
 * fdisk: fix for creating DOS label when BSD label is present
 * mount.8: added remark about blocksize to ext2 sb= mount option description.
