--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1375,6 +1375,7 @@ Possible values are:
 .TP
 .B old
 Old format of ufs, this is the default, read only.
+(Don't forget to give the \-r option.)
 .TP
 .B 44bsd
 For filesystems created by a BSD-like system (NetBSD,FreeBSD,OpenBSD).
