--- a/disk-utils/mkfs.8
+++ b/disk-utils/mkfs.8
@@ -113,8 +113,11 @@ for the ext2 file system.
 .BR fsck (8),
 .BR mkdosfs (8),
 .BR mke2fs (8),
+.BR mkfs.bfs (8),
 .BR mkfs.ext2 (8),
+.BR mkfs.ext3 (8),
 .BR mkfs.minix (8),
 .BR mkfs.msdos (8),
+.BR mkfs.vfat (8),
 .BR mkfs.xfs (8),
 .BR mkfs.xiafs (8)
