--- a/fdisk/cfdisk.8
+++ b/fdisk/cfdisk.8
@@ -419,6 +419,7 @@ command (above) for more information on the print formats.
 3: cannot get geometry; 4: bad partition table on disk.
 .SH "SEE ALSO"
 .BR fdisk (8),
+.BR mkfs (8),
 .BR parted (8),
 .BR sfdisk (8)
 .SH BUGS
