--- a/hwclock/hwclock.8
+++ b/hwclock/hwclock.8
@@ -590,10 +590,9 @@ on old systems)
 .BR tzset (3)
 
 .SH AUTHORS
-Written By Bryan Henderson, September 1996 (bryanh@giraffe-data.com),
+Written by Bryan Henderson, September 1996 (bryanh@giraffe-data.com),
 based on work done on the
 .I clock
 program by Charles Hedrick, Rob Hooft, and Harald Koenig.  
 See the source code for complete history and credits.
-
 
