--- a/fdisk/fdisk.8
+++ b/fdisk/fdisk.8
@@ -227,5 +227,6 @@ The option `dump partition table to file' is missing.
 .\" and many others.
 .SH "SEE ALSO"
 .BR cfdisk (8),
+.BR mkfs (8),
 .BR parted (8),
 .BR sfdisk (8)
