--- a/sys-utils/readprofile.1
+++ b/sys-utils/readprofile.1
@@ -69,6 +69,10 @@ Print all symbols in the mapfile. By default the procedures with 0 reported
 ticks are not printed.
 
 .TP
+.B -b
+Print individual histogram-bin counts.
+
+.TP
 .B -r
 Reset the profiling buffer. This can only be invoked by root, because
 .B /proc/profile
